fixed a bug that caused the page class to shift over to the left when links were clicked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,14 @@
 
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    height:100vh;
-    width:100vw;
     display: flex;
-    overflow-x:hidden;
+
+}
+aside {
+    min-width: 25%;
+    width: 25%;
+    height:100%;
+    background-color: cadetblue;
 }
 
 header {
@@ -98,12 +102,14 @@ header .social-media .fa {
     margin: 10px;
     margin-top: 15px;
 }
-aside {
-    min-width: 26%;
-    height:100%;
-}
 
 .page {
     display: flex;
     flex-direction: column;
+}
+section > section{
+    margin-left: 2%;
+}
+footer {
+    margin-left: 2%;
 }
